sfdx-source/force-app/main/default/objects/ironclad__Ironclad_Workflow__c/ironclad__Ironclad_Workflow__c.object-meta.xml
<CustomObject>
    <label>Ironclad Workflow</label>
    <nameField>
        <label>Ironclad Workflow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ironclad Workflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>