sfdx-source/force-app/main/default/objects/ironclad__Ironclad_Workflow__c/fields/ironclad__Workflow_Link__c.field-meta.xml
<CustomField>
    <fullName>ironclad__Workflow_Link__c</fullName>
    <label>Workflow Link</label>
    <type>Url</type>
</CustomField>