sfdx-source/force-app/main/default/objects/ironclad__Ironclad_Workflow__c/fields/ironclad__Workflow_Name__c.field-meta.xml
<CustomField>
    <fullName>ironclad__Workflow_Name__c</fullName>
    <label>Workflow Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>