sfdx-source/force-app/main/default/objects/ironclad__Ironclad_Workflow__c/fields/ironclad__Workflow_Status__c.field-meta.xml
<CustomField>
    <fullName>ironclad__Workflow_Status__c</fullName>
    <label>Workflow Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Sign</fullName>
            </value>
            <value>
                <fullName>Sign: Not Out for Signature</fullName>
            </value>
            <value>
                <fullName>Sign: Out for Signature</fullName>
            </value>
            <value>
                <fullName>Archive</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>