sfdx-source/force-app/main/default/objects/ironclad__Ironclad_Workflow__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Setting up CLM - This lookup field  allows users to see all related workflows directly from the source object.</description>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Ironclad Workflows</relationshipLabel>
    <relationshipName>Ironclad_Workflows</relationshipName>
    <type>Lookup</type>
</CustomField>