sfdx-source/force-app/main/default/objects/ironclad__Ironclad_Workflow__c/fields/Quote_URL__c.field-meta.xml
<CustomField>
    <fullName>Quote_URL__c</fullName>
    <description>LEM-449:The base URL for the CPQ Quote</description>
    <label>Quote URL</label>
    <type>Url</type>
</CustomField>